feat: add FileUtil for directory management and clear extracted frames